[gd_scene load_steps=7 format=3 uid="uid://cscur2105wgk5"]

[ext_resource type="Texture2D" uid="uid://bqhko2tkx4ru7" path="res://assets/images/background/museum_background.png" id="1_hsgjv"]
[ext_resource type="Script" path="res://game/level.gd" id="1_l2vt4"]
[ext_resource type="Texture2D" uid="uid://c6i8x5d7t37y3" path="res://assets/images/sprites/pedestal_long.png" id="2_vyppx"]
[ext_resource type="PackedScene" uid="uid://b47aog6buqfrv" path="res://classes/sculpture_block/sculpture_block.tscn" id="3_lff2h"]
[ext_resource type="PackedScene" uid="uid://b6q0fks7bmdxu" path="res://classes/sculpture_reference/sculpture_reference.tscn" id="4_xcgoh"]
[ext_resource type="PackedScene" uid="uid://lkqy1mql8a40" path="res://gui/level_gui.tscn" id="6_gf0kj"]

[node name="Level" type="Node"]
script = ExtResource("1_l2vt4")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -724.0
offset_right = 724.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_hsgjv")

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.12549, 0.12549, 0.772549)

[node name="Sculpture" type="Node2D" parent="."]
position = Vector2(576, 450)
scale = Vector2(1.6, 1.6)

[node name="Pedestal" type="Sprite2D" parent="Sculpture"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_vyppx")
offset = Vector2(0, 250)

[node name="SculptureBlock" parent="Sculpture" instance=ExtResource("3_lff2h")]

[node name="VisiblePivot" type="Node2D" parent="Sculpture"]

[node name="LineAxisX" type="Line2D" parent="Sculpture/VisiblePivot"]
points = PackedVector2Array(-15, 0, 15, 0)
width = 2.0
begin_cap_mode = 2
end_cap_mode = 2

[node name="LineAxisY" type="Line2D" parent="Sculpture/VisiblePivot"]
points = PackedVector2Array(0, -10, 0, 10)
width = 2.0
begin_cap_mode = 2
end_cap_mode = 2

[node name="SculptureReference" parent="." instance=ExtResource("4_xcgoh")]

[node name="LevelGUI" parent="." instance=ExtResource("6_gf0kj")]

[connection signal="block_carved" from="Sculpture/SculptureBlock" to="." method="_on_sculpture_block_block_carved"]
[connection signal="chisel_selected" from="LevelGUI" to="." method="set_chisel"]

[editable path="Sculpture/SculptureBlock"]
